--- a/cronometro/src/style.css
+++ b/cronometro/src/style.css
@@ -1,29 +1,43 @@
-.container{
+* {
+   box-sizing: border-box;
+}
+
+body{
+   width: 100%;
+   background-color: red;
+   color: wheat;
+   margin: 0 auto;
+}
+
+.container {
    display: flex;
    flex-direction: column;
    width: 100%;
    align-items: center;
    justify-content: center;
    font-family: 'Courier New', Courier, monospace;
+   position: relative;
+   min-height: 100vh;
 }
 
-.img{
-   width: 10rem;
-   height: 10rem;
+.img {
+   width: 15rem;
+   height: 15rem;
    padding: 2rem;
 }
 
-.timer{
-   font-size: 3rem;
-   margin-top: -8rem;
+.timer {
+   font-size: 4rem;
+   margin-top: -9rem;
 }
 
-.areaBtn{
+.areaBtn {
    margin-top: 4rem;
-   display: flex;
+   display: flex;   
+   padding-bottom: 2.5rem; 
 }
 
-.botao{
+.botao {
    width: 8rem;
    background-color: wheat;
    font-size: 1.5rem;
@@ -31,15 +45,34 @@
    color: red;
    border-radius: 1rem;
    cursor: pointer;
-   padding: .5rem;   
+   padding: .5rem;
 }
 
-.botao + .botao{
+.botao+.botao {
    margin-left: 1rem;
 }
 
-.botao:hover{
+.botao:hover {
    opacity: 0.7;
    color: blue;
    transition: all 0.50s;
+}
+
+#footer {
+   width: 100%;
+   text-align: center;
+   background: aliceblue;
+   color: red;
+   margin: 0 auto;
+   font-size: smaller;
+   position: absolute;
+   bottom: 0;  
+   height: 2.5rem;   
+}
+
+@media (max-width: 800px){
+   #footer{
+      font-size: .5rem;
+      padding: 1rem;
+   }
 }
