--- a/cronometro/src/style.css
+++ b/cronometro/src/style.css
@@ -9,6 +9,13 @@ body{
    margin: 0 auto;
 }
 
+a{
+   text-decoration: none;
+}
+a:hover{
+   text-decoration: underline;
+}
+
 .container {
    display: flex;
    flex-direction: column;
@@ -21,7 +28,7 @@ body{
 }
 
 .img {
-   width: 15rem;
+   width: 25rem;
    height: 15rem;
    padding: 2rem;
 }
@@ -38,7 +45,7 @@ body{
 }
 
 .botao {
-   width: 8rem;
+   width: 12rem;
    background-color: wheat;
    font-size: 1.5rem;
    text-align: center;
@@ -68,11 +75,21 @@ body{
    position: absolute;
    bottom: 0;  
    height: 2.5rem;   
+   padding-top: .5rem;
 }
 
 @media (max-width: 800px){
    #footer{
       font-size: .5rem;
-      padding: 1rem;
+      padding: 1.5rem;
+      padding-bottom: 2rem;
+      text-align: center;
+   }
+   .img{
+      width: 25rem;
+      height: 15rem;
+   }
+   .botao{
+      width: 10rem;
    }
 }
